clusters/main/kubernetes/system/networkpolicies/app/authentik-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
      pod.name: main
  ingress:
    - fromEntities:
        # Cilium marks traffic from the Gateway/ingress proxy with the reserved "ingress" identity.
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10230"
              protocol: TCP
